# cosmic-ext-gtk-theme

./: .gitignore  CLAUDE.md  Cargo.toml  EXP1_RESEARCH.md  EXP2_RESEARCH.md  EXP3_RESEARCH.md  EXP5_RESEARCH.md  EXP6_RESEARCH.md  Makefile  README.md  RESEARCH.md  identity_signal_analysis.ipynb  justfile  requirements.txt  run_experiment.py
.github/workflows/: release.yml
experiments/: __init__.py  exp1_paired_frequency.py  exp2_within_identity.py  exp3_identity_emergence.py  exp4_reference_correlation.py  exp5_frequency_injection.py  exp6_channel_importance.py  exp7_pca_identity.py
identity_analysis/: __init__.py  frequency.py  pipeline.py  plotting.py  scoring.py  utils.py
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
packaging/flatpak/: dev.jacobwlms.CosmicExtGtkTheme.ci.yml  dev.jacobwlms.CosmicExtGtkTheme.yml
packaging/rpm/: cosmic-ext-gtk-theme.spec
phase3/: PEER_REVIEW.md
phase3.5/experiment_01_tokenisation_analysis/: README.md
phase3.5/findings/: master_log.md  state_of_affairs.md
phase3/experiment_01_qwen3_identity_mapping/: README.md
phase3/experiment_02_token_position_analysis/: README.md
phase3/experiment_03_celebrity_triangulation/: README.md
phase3/experiment_04_token_injection/: README.md
phase3/experiment_05_combined_pipeline/: README.md
phase4/: BRIEF.md
res/: dev.jacobwlms.CosmicExtGtkTheme.desktop
research/: CYCLES.md  FINDINGS.md  FINDINGS_SLERP.md  FINDINGS_TOKEN_SWAP.md  SERENDIPITY.md  STATE.md
results/exp7/: results.csv  (+1 more)
src/: app.rs  config.rs  css_generator.rs  main.rs  theme_reader.rs
(+37 files in other folders)
